Fixed output cells not showing return value of type()

--- a/Python_Basics/Theory/0_Basics.ipynb
+++ b/Python_Basics/Theory/0_Basics.ipynb
@@ -90,10 +90,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'int'>\n",
-      "<class 'type'>\n"
+      "class 'int'\n",
+      "class 'float'\n",
+      "class 'type'\n",
+      "class 'type'\n"
      ]
     }
    ],
@@ -109,12 +109,12 @@
     "# Storing the what type() returns in a variable\n",
     "result = type(a)\n",
     "\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(result)\n",
+    "print(str(type(a)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(b)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(result)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
     "\n",
     "# Interesting fact: 'type' of a 'type' returns a 'type' :'D\n",
-    "print(type(result))"
+    "print(str(type(result)).replace(\"<\", \"\").replace(\">\", \"\"))"
    ]
   },
   {
@@ -127,20 +127,20 @@
      "output_type": "stream",
      "text": [
       "Addition of two integers\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n",
+      "class 'int'\n",
+      "class 'int'\n",
+      "class 'int'\n",
       "30\n",
       "\n",
       "Addition of an integer and a float object\n",
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'float'>\n",
+      "class 'int'\n",
+      "class 'float'\n",
+      "class 'float'\n",
       "20.21\n",
       "\n",
       "Attempting to add an integer and a string object\n",
-      "<class 'int'>\n",
-      "<class 'str'>\n"
+      "class 'int'\n",
+      "class 'str'\n"
      ]
     },
     {
@@ -150,7 +150,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(a))\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(b))\n\u001b[1;32m---> 32\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n",
+      "Cell \u001b[1;32mIn [3], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(\u001b[39mtype\u001b[39m(a))\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m<\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m>\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(\u001b[39mtype\u001b[39m(b))\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m<\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m>\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m---> 32\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -164,9 +164,9 @@
     "a = 10\n",
     "b = 20\n",
     "result = a + b\n",
-    "print(type(a))\n",
-    "print(type(b)) \n",
-    "print(type(result))\n",
+    "print(str(type(a)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(b)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(result)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
     "print(result)\n",
     "print(\"\")\n",
     "\n",
@@ -174,9 +174,9 @@
     "a = 10\n",
     "b = 10.21\n",
     "result = 10 + 10.21\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(type(result))\n",
+    "print(str(type(a)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(b)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(result)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
     "print(result)\n",
     "print(\"\")\n",
     "\n",
@@ -185,23 +185,23 @@
     "print(\"Attempting to add an integer and a string object\")\n",
     "a = 2\n",
     "b = 'My Name'\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
+    "print(str(type(a)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(b)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
     "result = a + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
+      "class 'int'\n",
+      "class 'str'\n",
+      "class 'str'\n",
       "My Name My Name \n"
      ]
     }
@@ -215,15 +215,15 @@
     "b = \"My Name \"\n",
     "result = a * b\n",
     "\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(type(result))\n",
+    "print(str(type(a)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(b)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
+    "print(str(type(result)).replace(\"<\", \"\").replace(\">\", \"\"))\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,15 +238,15 @@
     "\n",
     "# Type Annotation is completely optional in Python\n",
     "def dry(a: int | float | str, b: int | float | str) -> int | float | str:\n",
-    "    a_type = type(a)\n",
-    "    b_type = type(b)\n",
+    "    a_type = str(type(a)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
+    "    b_type = str(type(a)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
     "    print(f\"Attempting to add {a_type} and {b_type} object\")\n",
     "    print(f\"Type of the first parameter is: {a_type}\")\n",
     "    print(f\"Type of the second parameter is: {b_type}\")\n",
     "\n",
     "    result = a + b\n",
-    "\n",
-    "    print(f\"The type of the result of adding the given two objects is: {type(result)}\")\n",
+    "    result_type = str(type(result)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
+    "    print(f\"The type of the result of adding the given two objects is: {result_type}\")\n",
     "    print(f\"The result of adding is: {result}\")\n",
     "\n",
     "    return result"
@@ -254,17 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to add <class 'int'> and <class 'float'> object\n",
-      "Type of the first parameter is: <class 'int'>\n",
-      "Type of the second parameter is: <class 'float'>\n",
-      "The type of the result of adding the given two objects is: <class 'float'>\n",
+      "Attempting to add |class 'int'| and |class 'int'| object\n",
+      "Type of the first parameter is: |class 'int'|\n",
+      "Type of the second parameter is: |class 'int'|\n",
+      "The type of the result of adding the given two objects is: |class 'float'|\n",
       "The result of adding is: 20.21\n"
      ]
     },
@@ -274,7 +274,7 @@
        "20.21"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to add <class 'int'> and <class 'str'> object\n",
-      "Type of the first parameter is: <class 'int'>\n",
-      "Type of the second parameter is: <class 'str'>\n"
+      "Attempting to add class 'int' and class 'int' object\n",
+      "Type of the first parameter is: class 'int'\n",
+      "Type of the second parameter is: class 'int'\n"
      ]
     },
     {
@@ -307,7 +307,7 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[1;32mIn [6], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      6\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mMy Name\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m dry(a, b)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProgram will not reach this line\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn [4], line 18\u001b[0m, in \u001b[0;36mdry\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the first parameter is: \u001b[39m\u001b[39m{\u001b[39;00ma_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the second parameter is: \u001b[39m\u001b[39m{\u001b[39;00mb_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 18\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe type of the result of adding the given two objects is: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(result)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe result of adding is: \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [4], line 18\u001b[0m, in \u001b[0;36mdry\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the first parameter is: \u001b[39m\u001b[39m{\u001b[39;00ma_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the second parameter is: \u001b[39m\u001b[39m{\u001b[39;00mb_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 18\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n\u001b[0;32m     19\u001b[0m result_type \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mtype\u001b[39m(result))\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m<\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m>\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe type of the result of adding the given two objects is: \u001b[39m\u001b[39m{\u001b[39;00mresult_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,20 +347,21 @@
     "    # but if an exception or error occurs it will move onto\n",
     "    # the 'except' block\n",
     "    try:\n",
-    "        a_type = type(a)\n",
-    "        b_type = type(b)\n",
+    "        a_type = str(type(a)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
+    "        b_type = str(type(a)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
     "        print(f\"Attempting to add {a_type} and {b_type} object\")\n",
     "        print(f\"Type of the first parameter is: {a_type}\")\n",
     "        print(f\"Type of the second parameter is: {b_type}\")\n",
     "\n",
     "        result = a + b\n",
-    "\n",
-    "        print(f\"The type of the result of adding the given two objects is: {type(result)}\")\n",
+    "        result_type = str(type(result)).replace(\"<\", \"|\").replace(\">\", \"|\")\n",
+    "        print(f\"The type of the result of adding the given two objects is: {result_type}\")\n",
     "        print(f\"The result of adding is: {result}\")\n",
+    "        return result\n",
     "\n",
     "    # Do nothing in the except block, the 'pass' keyword simply does nothing\n",
-    "    except:\n",
-    "        pass\n",
+    "    except TypeError as error:\n",
+    "        return error\n",
     "\n",
     "    # Pass through the 'except' block and run the code in 'finally' block if an exception occurred\n",
     "    finally:\n",
@@ -369,24 +370,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to add <class 'int'> and <class 'str'> object\n",
-      "Type of the first parameter is: <class 'int'>\n",
-      "Type of the second parameter is: <class 'str'>\n",
-      "You cannot add <class 'int'> and <class 'str'>\n",
-      "Attempting to add <class 'int'> and <class 'float'> object\n",
-      "Type of the first parameter is: <class 'int'>\n",
-      "Type of the second parameter is: <class 'float'>\n",
-      "The type of the result of adding the given two objects is: <class 'float'>\n",
+      "Attempting to add |class 'int'| and |class 'int'| object\n",
+      "Type of the first parameter is: |class 'int'|\n",
+      "Type of the second parameter is: |class 'int'|\n",
+      "You cannot add |class 'int'| and |class 'int'|\n",
+      "Attempting to add |class 'int'| and |class 'int'| object\n",
+      "Type of the first parameter is: |class 'int'|\n",
+      "Type of the second parameter is: |class 'int'|\n",
+      "The type of the result of adding the given two objects is: |class 'float'|\n",
       "The result of adding is: 20.2\n",
-      "You cannot add <class 'int'> and <class 'float'>\n",
-      "None\n",
+      "You cannot add |class 'int'| and |class 'int'|\n",
+      "20.2\n",
       "Program will reach this line\n"
      ]
     }
@@ -988,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
