--- a/Python_Basics/Theory/2_AdvancedListString.ipynb
+++ b/Python_Basics/Theory/2_AdvancedListString.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "['This', 'is', 'a', 'string']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "['T', 'h', 'i', 's', ' ', 'i', 's', ' ', 'a', ' ', 's', 't', 'r', 'i', 'n', 'g']\n",
-      "<class 'list'>\n"
+      "class 'list'\n"
      ]
     }
    ],
@@ -58,12 +58,12 @@
     "# To get all characters of a string in a list\n",
     "l = list(s)\n",
     "print(l)\n",
-    "print(type(l))"
+    "print(str(type(l)).replace(\"<\", \"\").replace(\">\", \"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "This is a string\n",
-      "<class 'str'>\n"
+      "class 'str'\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "# Join elements of l as given\n",
     "s_joined = \"\".join(l)\n",
     "print(s_joined)\n",
-    "print(type(s_joined))"
+    "print(str(type(s_joined)).replace(\"<\", \"\").replace(\">\", \"\"))"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
