--- a/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
+++ b/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
@@ -185,6 +185,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 -> 4 -> 3\n",
+    "5 -> 6 -> 4\n",
+    "-----------\n",
+    "7 -> 0 -> 8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -192,8 +203,8 @@
    "source": [
     "def addTwoNumbers(l1: ListNode, l2: ListNode) -> ListNode:\n",
     "    carry = 0\n",
-    "    head = ListNode(0)\n",
-    "    prev = head\n",
+    "    l = ListNode(0)\n",
+    "    pointer = l\n",
     "    while l1 or l2 or carry:\n",
     "        if l1:\n",
     "            carry += l1.val\n",
@@ -202,10 +213,10 @@
     "            carry += l2.val\n",
     "            l2 = l2.next\n",
     "        curr_val = carry % 10\n",
-    "        prev.next = ListNode(curr_val)\n",
-    "        prev = prev.next\n",
+    "        pointer.next = ListNode(curr_val)\n",
+    "        pointer = pointer.next\n",
     "        carry = carry // 10\n",
-    "    return head.next"
+    "    return l.next"
    ]
   },
   {
@@ -258,10 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p_l = [7, 0, 8]"
+   ]
   }
  ],
  "metadata": {
@@ -280,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
