--- a/Capstone Projects/Titanic Dataset/Analysis.ipynb
+++ b/Capstone Projects/Titanic Dataset/Analysis.ipynb
@@ -1,8 +1,48 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Real-world datasets are rarely in a format that allows a machine learning or deep learning model to train on them. Before feeding a dataset to a model, we must thoroughly analyze its features to determine how we will process each of them.\n",
+    "\n",
+    "Different analysts' workflows may be vastly different from one another. This case study, and the ones that will follow, will show my personal workflow when dealing with a dataset. This personal workflow was developed through training and experience, and you will most likely develop your own as you learn.\n",
+    "\n",
+    "Nonetheless, we will make every effort to adhere to the best practices that professionals in this field prefer whenever possible. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 1 : First Steps"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typically, a dataset is analyzed using a Jupyter Notebook file running a Python kernel. The notebook format allows us to run code and get the resulting output using cells instead of separating it into several .py files. This speeds up data analysis and makes it much easier to structure our workflow.\n",
+    "\n",
+    "We will utilize Markdown cells to explain and monitor the reasoning behind each of our decisions related to the dataset. We will also use Markdown cells to explain what a Code cells purpose is, instead of just using the comment functionality of python."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Step 1__\n",
+    "\n",
+    "The following Code cell imports some basic libraries that will allow us to analyze, process and visualize data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +59,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"train.csv\")\n",
-    "test_df = pd.read_csv(\"test.csv\")"
+    "__Step 2__\n",
+    "\n",
+    "In this particular case, we have been given a training dataset and a testing dataset in CSV(Comma Separated Values) format. In the next Code cell, we will use the pandas library to read these datasets and store them as a DataFrame object provided by pandas. \n",
+    "\n",
+    "The DataFrame object provided by pandas is a powerful analytical tool that we will be using extensively for a variety of purposes. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Github doesn't play nice with '<' , '>' characters\n",
+    "# and this often results in the returning value of the type()\n",
+    "# function not showing up in output cells\n",
+    "\n",
+    "# This is just a simple funtion to deal with this issue\n",
+    "\n",
+    "def git_type(var: any) -> str:\n",
+    "    return str(type(var)).replace('<', '|').replace('>', '|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "|class 'pandas.core.frame.DataFrame'|\n",
+      "|class 'pandas.core.frame.DataFrame'|\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df = pd.read_csv(\"train.csv\")\n",
+    "test_df = pd.read_csv(\"test.csv\")\n",
+    "\n",
+    "# Check the type of these variables\n",
+    "print(type(train_df))\n",
+    "print(type(test_df))\n",
+    "\n",
+    "# Only to show output in github repos\n",
+    "print(git_type(train_df))\n",
+    "print(git_type(test_df))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Step 3__\n",
+    "\n",
+    "Previewing the dataset is a must before moving on, just so we have a visualization of what our data looks like.\n",
+    "\n",
+    "DataFrame.head(n) will return and display the first n samples from our dataset.\n",
+    "\n",
+    "DataFrame.tail(n) will return and display the last n samples from our dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +362,12 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The first thing we can do is to directly look at some of the \n",
-    "# samples in our training dataset, to get an overall idea of how our data and related features look like.\n",
     "train_df.head(10)"
    ]
   },
@@ -277,47 +376,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to make ML or DL models that can predict whether a certain PassengerId survived, thus, the column labelled 'Survived' is our target. We have to somehow use the remaining columns, which we will call features, to train our model to pick up various patterns related to the survival of a passenger."
+    "### Section 2 : Using Pandas to Get Important Overviews"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature_1 = PassengerId\n",
-      "Feature_2 = Pclass\n",
-      "Feature_3 = Name\n",
-      "Feature_4 = Sex\n",
-      "Feature_5 = Age\n",
-      "Feature_6 = SibSp\n",
-      "Feature_7 = Parch\n",
-      "Feature_8 = Ticket\n",
-      "Feature_9 = Fare\n",
-      "Feature_10 = Cabin\n",
-      "Feature_11 = Embarked\n",
-      "Target Column = Survived\n"
-     ]
-    }
-   ],
    "source": [
-    "# In this case we will first want to separate our feature columns from the dataset\n",
+    "__Step 4__\n",
     "\n",
-    "features =[column for column in train_df.columns.values if column != \"Survived\"]\n",
+    "The pandas library offers two major DataFrame methods that allows us to get an overall picture of the dataset in a compact form.\n",
     "\n",
-    "for index, feature in enumerate(features):\n",
-    "    print(f\"Feature_{index + 1} = {feature}\")\n",
-    "\n",
-    "print(f\"Target Column = Survived\")"
+    "The next Code cell uses, __DataFrame.info()__, which returns us how many total samples we have, how many non-null values each of the features have and what their corresponding data types are."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -347,54 +423,229 @@
     }
    ],
    "source": [
-    "# One of the more important overviews we can\n",
-    "# get directly using pandas is by calling the info()\n",
-    "# method on a DataFrame object\n",
-    "# This gives us information about how many non-null values each\n",
-    "# column has and what the corresponding data types of a column is \n",
     "train_df.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 418 entries, 0 to 417\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  418 non-null    int64  \n",
-      " 1   Pclass       418 non-null    int64  \n",
-      " 2   Name         418 non-null    object \n",
-      " 3   Sex          418 non-null    object \n",
-      " 4   Age          332 non-null    float64\n",
-      " 5   SibSp        418 non-null    int64  \n",
-      " 6   Parch        418 non-null    int64  \n",
-      " 7   Ticket       418 non-null    object \n",
-      " 8   Fare         417 non-null    float64\n",
-      " 9   Cabin        91 non-null     object \n",
-      " 10  Embarked     418 non-null    object \n",
-      "dtypes: float64(2), int64(4), object(5)\n",
-      "memory usage: 36.0+ KB\n"
-     ]
-    }
-   ],
    "source": [
-    "test_df.info()"
+    "__Step 5__\n",
+    "\n",
+    "The next Code cell uses, __DataFrame.describe()__, which returns us various important statistical values related to each of the numeric features. \n",
+    "\n",
+    "But properly grasping the table generated from this method and extracting useful information from it requires a strong knowledge of statistics.\n",
+    "\n",
+    "We will get back to this table later on in our analysis and discuss how and what important information we could have extracted from here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>714.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>891.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.383838</td>\n",
+       "      <td>2.308642</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0.523008</td>\n",
+       "      <td>0.381594</td>\n",
+       "      <td>32.204208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>257.353842</td>\n",
+       "      <td>0.486592</td>\n",
+       "      <td>0.836071</td>\n",
+       "      <td>14.526497</td>\n",
+       "      <td>1.102743</td>\n",
+       "      <td>0.806057</td>\n",
+       "      <td>49.693429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>223.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>20.125000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.910400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>446.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.454200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>668.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>891.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>512.329200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
+       "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
+       "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
+       "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
+       "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
+       "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
+       "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
+       "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
+       "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
+       "\n",
+       "            Parch        Fare  \n",
+       "count  891.000000  891.000000  \n",
+       "mean     0.381594   32.204208  \n",
+       "std      0.806057   49.693429  \n",
+       "min      0.000000    0.000000  \n",
+       "25%      0.000000    7.910400  \n",
+       "50%      0.000000   14.454200  \n",
+       "75%      0.000000   31.000000  \n",
+       "max      6.000000  512.329200  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 3 : Dropping Features Completely"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 4 : Separating Numeric and Categorical Features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 5 : Feature Engineering"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 6 : Completely Processing the Dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 7 : Choosing Machine Learning Models"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 8 : Training the Models on the Processed Dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 9 : Comparing the Predictive Accuracy of the Models"
+   ]
   }
  ],
  "metadata": {
