NumPy and Matplotlib

--- a/Capstone Projects/Titanic Dataset/Analysis.ipynb
+++ b/Capstone Projects/Titanic Dataset/Analysis.ipynb
@@ -604,6 +604,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Step 6__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we start manipulating and preprocessing features, we will want to check if there are features we can drop completely after initial inspection. \n",
+    "\n",
+    "Two types of features are usually considered for this step. Any "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Section 4 : Separating Numeric and Categorical Features"
    ]
   },
@@ -664,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
