--- a/Python_Basics/Theory/2_AdvancedListString.ipynb
+++ b/Python_Basics/Theory/2_AdvancedListString.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "['This', 'is', 'a', 'string']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The for loop method runtime: 1192794800 nanosec\n"
+      "The for loop method runtime: 1121424900 nanosec\n"
      ]
     }
    ],
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum method runtime: 316956100 nanosec\n"
+      "The sum method runtime: 267077300 nanosec\n"
      ]
     }
    ],
@@ -196,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The np.sum method runtime: 6113900 nanosec\n"
+      "The np.sum method runtime: 4235100 nanosec\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "The ratio of the benchmarks is: \n",
-      "npsum : sum : for = 1 : 51.84 : 195.10\n"
+      "npsum : sum : for = 1 : 63.06 : 264.79\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The np.sum method runtime: 2390600 nanosec\n"
+      "The np.sum method runtime: 107798700 nanosec\n"
      ]
     }
    ],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
      "output_type": "stream",
      "text": [
       "The ratio of the benchmarks is: \n",
-      "np_nb_sum : npsum : sum : for = 1 : 2.56 : 132.58 : 498.95\n"
+      "np_nb_sum : npsum : sum : for = 1 : 0.04 : 2.48 : 10.40\n"
      ]
     }
    ],
@@ -355,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
