--- a/Computational Python/Numerical Analysis/1_Vector/Vector.ipynb
+++ b/Computational Python/Numerical Analysis/1_Vector/Vector.ipynb
@@ -19,22 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array([-1, 1, -2])\n",
     "\n",
+    "\n",
     "def l2_norm(vec: np.ndarray) -> float:\n",
     "    return round(np.sqrt(np.sum(np.square(vec))), ndigits=4)\n",
     "\n",
+    "\n",
     "def l_infinity_norm(vec: np.ndarray) -> float:\n",
-    "    return np.max(np.abs(vec))"
+    "    return float(np.max(np.abs(vec)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +44,13 @@
      "output_type": "stream",
      "text": [
       "2.4495\n",
-      "2\n"
+      "2.0\n"
      ]
     }
    ],
    "source": [
     "print(l2_norm(x))\n",
-    "print(l_infinity_norm(x))"
+    "print(l_infinity_norm(x))\n"
    ]
   },
   {
@@ -61,30 +63,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array([1, 1, 1])\n",
-    "y = np.array([1.2001, 0.99991, 0.92538])"
+    "y = np.array([1.2001, 0.99991, 0.92538])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Although the functions for norm could be used directly\n",
+    "# to calculate the distances, this is only for illustration\n",
+    "\n",
     "def l2_distance(vec_1: np.ndarray, vec_2: np.ndarray) -> float:\n",
     "    return round(np.sqrt(np.sum(np.square(vec_1 - vec_2))), ndigits=5)\n",
     "\n",
-    "def l2_inf_distance(vec_1: np.ndarray, vec_2:np.ndarray) -> float:\n",
-    "    return round(np.max(np.abs(vec_1 - vec_2)), ndigits=4)"
+    "\n",
+    "def l2_inf_distance(vec_1: np.ndarray, vec_2: np.ndarray) -> float:\n",
+    "    return round(np.max(np.abs(vec_1 - vec_2)), ndigits=4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +104,88 @@
    ],
    "source": [
     "print(l2_distance(x, y))\n",
-    "print(l2_inf_distance(x, y))"
+    "print(l2_inf_distance(x, y))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section : Using Linear Algebra Module of Numpy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumPy provides highly optimzed algorithms from Linear Algebra as functions through the 'linalg' module. these functions can be used on'ndarray' objects and in most cases the functions are written to be multi-purpose. \n",
+    "\n",
+    "For example, the 'norm' function can calculate the Matrix or vector norm. It is able to return one of eight different matrix norms, or one of an infinite number of vector norms, depending on the value of the ord parameter.\n",
+    "\n",
+    "__Reference 1:__ https://numpy.org/doc/stable/reference/generated/numpy.linalg.norm.html#numpy.linalg.norm\n",
+    "\n",
+    "__Reference 2:__ https://numpy.org/doc/stable/reference/routines.linalg.html#module-numpy.linalg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import linalg as LA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l2 norm: 2.4495\n",
+      "l_inf norm: 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([-1, 1, -2])\n",
+    "\n",
+    "l2_norm_val = round(LA.norm(x), ndigits=4)\n",
+    "l_inf_norm_val = LA.norm(x, ord=np.inf)\n",
+    "\n",
+    "print(f\"l2 norm: {l2_norm_val}\")\n",
+    "print(f\"l_inf norm: {l_inf_norm_val}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21356\n",
+      "0.2001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separate functions are not necessary to calculate the distances\n",
+    "x = np.array([1, 1, 1])\n",
+    "y = np.array([1.2001, 0.99991, 0.92538])\n",
+    "\n",
+    "l2_dist_val = LA.norm(x-y)\n",
+    "l2_inf_dist_val = LA.norm(x-y, ord=np.inf)\n",
+    "\n",
+    "print(round(l2_dist_val, ndigits=5))\n",
+    "print(round(l2_inf_dist_val, ndigits=5))\n"
    ]
   },
   {
