--- a/Computational Python/Numerical Analysis/2_Matrix/Matrix.ipynb
+++ b/Computational Python/Numerical Analysis/2_Matrix/Matrix.ipynb
@@ -2,10 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from numpy import linalg as LA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section : Matrix Norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2 -1]\n",
+      " [ 0  3 -1]\n",
+      " [ 5 -1  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, -1], [0, 3, -1], [5, -1, 1]])\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mat_inf_norm(mat_1: np.ndarray) -> float:\n",
+    "    # Initialize a 1-D array with equal number\n",
+    "    # of elements as the dimension of the nxn square matrix\n",
+    "\n",
+    "    temp_vec = np.zeros(shape=(mat_1.shape[0],), dtype=np.float64)\n",
+    "\n",
+    "    for index, row in enumerate(mat_1):\n",
+    "        temp_vec[index] = np.sum(np.abs(row))\n",
+    "    \n",
+    "    return np.max(temp_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_inf_norm(A)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section : Using NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat_norm_inf_val = LA.norm(A, ord=np.inf)\n",
+    "\n",
+    "print(mat_norm_inf_val)"
+   ]
   }
  ],
  "metadata": {
@@ -15,8 +111,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
