--- a/Computational Python/Numerical Analysis/2_Matrix/Matrix.ipynb
+++ b/Computational Python/Numerical Analysis/2_Matrix/Matrix.ipynb
@@ -44,6 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Algorithm for computing l_inf of a matrix\n",
+    "\n",
     "def mat_inf_norm(mat_1: np.ndarray) -> float:\n",
     "    # Initialize a 1-D array with equal number\n",
     "    # of elements as the dimension of the nxn square matrix\n",
