--- a/Computational Python/Numerical Analysis/3_Eigenvalues and Eigenvectors/Eigen.ipynb
+++ b/Computational Python/Numerical Analysis/3_Eigenvalues and Eigenvectors/Eigen.ipynb
@@ -173,6 +173,101 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section : l2 norm of A"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The formula for computing the l2 norm is given by,\n",
+    "\n",
+    "$||A||_{2} = \\sqrt{\\rho(A^{t}A)}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  1  0]\n",
+      " [ 1  2  1]\n",
+      " [-1  1  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 1, 0], [1, 2, 1], [-1, 1, 2]])\n",
+    "print(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3  2 -1]\n",
+      " [ 2  6  4]\n",
+      " [-1  4  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "At_A = np.matmul(np.transpose(A), A)\n",
+    "print(At_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The l2 norm of A is : 3.106\n"
+     ]
+    }
+   ],
+   "source": [
+    "l2_norm_A = round(np.sqrt(np.max(LA.eigvals(At_A))), ndigits=3)\n",
+    "\n",
+    "print(f\"The l2 norm of A is : {l2_norm_A}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.106\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Directly Using NumPy\n",
+    "print(round(LA.norm(A, ord=2), ndigits=3))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
